# 1hourpythonprojects

./: .gitignore  README.md
Docker/: environment.yml  uitleg.txt
Docker/test_env/: Dockerfile
Voorbeeldproject/: setup.py  uitleg.txt
example_project/: create_docs.bat  initiate_sphinx_quickstart.bat  install_package.bat  pyproject.toml  run_coverage.bat
example_project/docs/doctrees/: environment.pickle  index.doctree
example_project/docs/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
example_project/docs/html/_sources/: index.rst.txt
example_project/my_project/: __init__.py
example_project/my_project/sub_package/: add_something.py  multiply_something.py
example_project/source/: add_something.rst  conf.py  technical_docs.rst
example_project/tests/: __init__.py  test_add_something.py
html_helper/: pyproject.toml  run_coverage.bat
html_helper/examples/: add_figure_to_html.py  try_html_package.ipynb
html_helper/html_helper/components/: figure.py  paragraph.py  table.py
html_helper/html_helper/generator/: generate_html.py
html_helper/source/: conf.py  index.rst  multiply_something.rst
html_helper/tests/: test_basic_html.py
html_helper/tests/test_data/reference/: ref_create_empty_html.html  ref_create_empty_html_wrong.html  ref_create_html_with_figure.html
